--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,16 +8,28 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} */
-
 body {
   background-color: white;
+  font-family: 'Montserrat';
+}
+
+.ql-container {
+  border: none !important;
+  min-height: 150px;
+  background-color: white !important;
+  max-height: 500px;
+}
+
+.ql-toolbar {
+  border: none !important;
+  border-bottom: 1px solid #dedbdb !important;
+  background-color: white !important;
+  border-radius: 0.75rem;
+}
+
+.ql-editor {
+  padding: 1rem;
+  border: none !important;
 }
 
 @layer utilities {
